fix token overflow

--- a/web/src/scss/dashboard.scss
+++ b/web/src/scss/dashboard.scss
@@ -2,6 +2,7 @@
   position: relative;
   box-shadow:0 2px 10px 2px rgba(0,0,0,.24), 0 0 2px rgba(0,0,0,.12);
   border: none;
+  overflow: hidden;
 }
 
 .panel-heading{
